[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "sentisift-mcp"
version = "0.1.2"
description = "Official Model Context Protocol (MCP) server for SentiSift. Lets Claude Desktop, Cursor, VS Code, Continue, and other MCP-compatible AI hosts call the SentiSift comment-moderation and intelligence API as a native tool."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "Pickel Fintech", email = "tom@sentisift.com" },
]
keywords = [
    "sentisift",
    "mcp",
    "model-context-protocol",
    "claude-desktop",
    "cursor",
    "sentiment-analysis",
    "comment-moderation",
    "llm-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=3.2,<4.0",
    "sentisift>=0.1.1,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.5",
    "ruff>=0.1",
]

[project.scripts]
sentisift-mcp = "sentisift_mcp.server:main"

[project.urls]
Homepage = "https://sentisift.com"
Documentation = "https://sentisift.com/api-docs.html"
"OpenAPI Spec" = "https://sentisift.com/openapi.json"
Repository = "https://gitlab.com/pickel-fintech/sentisift-sdks"
Changelog = "https://gitlab.com/pickel-fintech/sentisift-sdks/-/blob/main/mcp/CHANGELOG.md"
Issues = "https://gitlab.com/pickel-fintech/sentisift-sdks/-/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sentisift_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/sentisift_mcp",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
